# IG

./: CMakeLists.txt  README.md  grayscale_utils.cpp  grayscale_utils.h  ig.cpp  ig.h  image_loader.cpp  image_loader.h  main.cpp  model.cpp  model.h  pgm_writer.cpp  pgm_writer.h
assets/: output.pgm
results/: input1.pgm
